@@ -41,3 +41,5 @@
       - Updated: CSV export version upgraded to version 6
       - Added: possibility to pair carriers with carriers to external pickup points and to distinguish between
         Packeta pickup points only and all pickup points
+      - Fixed: correctly display the name of the carrier identical to the name of the e-shop on the module setting page
+      - Fixed: Undefined index: customer_country in DEV mode
